build alignment fix

--- a/src/components/CustNavbar/CustNavbar.module.scss
+++ b/src/components/CustNavbar/CustNavbar.module.scss
@@ -14,6 +14,7 @@
     flex-direction: row;
     gap: 10px;
     align-content: center;
+    align-self: center;
 }
 
 .text {
@@ -36,10 +37,12 @@
     display: flex;
     flex-direction: row;
     gap: 30px;
+    align-items: center;
 }
 
 .buttonContainer {
     align-content: center;
+    align-self: center;
 }
 
 .buy {
